# scottsaenz-site

./: .gitignore  .pre-commit-config.yaml  README.md  docusaurus.config.ts  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sidebars.ts
.github/workflows/: deploy.yml
blog/: index.mdx
docs/: about.md  index.md
docs/blog/: 20250601.md  index.md
docs/blog/posts/: 20250601.md
docs/css/: custom.css
docs/js/: mermaid-config.js
docs/training/: advanced-python-training.md
src/css/: custom.css
src/pages/: about.mdx
